# ChallengeFlaskFastApi

./: .gitignore  README.md  docker-compose.yml  example.env
ApiFastAPI/: app.py  container.py  example.env  pyproject.toml  settings.py
ApiFastAPI/src/exceptions/: external_service_exception.py
ApiFastAPI/src/routes/: user_address_route.py
ApiFastAPI/src/schemas/: user_address_schema.py
ApiFastAPI/src/services/: user_address_service.py
ApiFastAPI/tests/: conftest.py
ApiFastAPI/tests/routes/: test_user_address_route.py
ApiFastAPI/tests/services/: test_user_address_service.py
ApiFlask/: app.py  container.py  pyproject.toml  settings.py
ApiFlask/app/: settings.py
ApiFlask/app/models/: address.py  base.py  user.py
ApiFlask/src/controllers/: user_controller.py
ApiFlask/src/dtos/: user_address_dto.py
ApiFlask/src/exceptions/: import_exceptions.py  user_address_exceptions.py
ApiFlask/src/models/: address.py  user.py
ApiFlask/src/repositories/: user_address_repository.py
ApiFlask/src/routes/: user_address_route.py
ApiFlask/src/schemas/: user_address_schema.py
ApiFlask/src/services/: user_address_service.py
ApiFlask/tests/: conftest.py
ApiFlask/tests/controllers/: test_user_controller.py
ApiFlask/tests/repositories/: test_user_address_repository.py
ApiFlask/tests/routes/: test_user_address_route.py
ApiFlask/tests/services/: test_user_address_service.py
