[project]
name = "apifastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Guerra",email = "dev.gguerra@gmail.com"}
]
license = {text = "APACHE 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)"
]


[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
